src/test/deca/context/invalid/sansObjet/BadTypeDeclarationFloat.deca
{
    floar x = 2020.1;
}